# qgoptax

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml
qgoptax/: __init__.py
qgoptax/manifolds/: __init__.py  stiefel_manifold.py  utils.py
qgoptax/optimizers/: __init__.py  adam.py  base_optimizer.py  natural_gradient.py  sgd.py  utils.py
tests/: test_manifolds.py  test_stiefel.py
