[tool.poetry]
name = "qgoptax"
version = "0.1.0"
description = ""
authors = ["Ilia Luchnikov <ilia.luchnikov@phystech.edu>, Aleksandr Berezutskii <aleksandr.berezutskii@usherbrooke.ca>"]

[tool.poetry.dependencies]
#python = "^3.8"
#jax = "^0.2.12"
#QGOpt = "^1.0.0"
typing = "^3.7.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"
pylint = "^2.7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
